--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/versatica/mediasoup.git"
+    "url": "https://github.com/charlescao92/mediasoup.git"
   },
   "funding": {
     "type": "opencollective",
